# summer3wip

./: LICENSE  pyproject.toml
summer3/: __init__.py  categories.py  engine.py  epi.py  experimental.py  graph.py  managed.py  properties.py  proto.py  runners.py  utils.py
summer3/computegraph/: dynamic.py  jaxify.py  types.py  utils.py
summer3/computegraph/draw/: draw.py
summer3/polarized/: categories.py  expanding.py  flows.py  properties.py
